--- a/Website/flex/index.html
+++ b/Website/flex/index.html
@@ -45,6 +45,132 @@
         <p>3</p>
     </div>
     <hr>
+    <br><h1>flex-direction = column-reverse</h1>
+    <div class="container flex-col-rev">
+       <p>1</p>
+        <p>2</p>
+        <p>3</p>
+    </div>
+    <hr>
     <br>
+    <h1>flex-wrap</h1>
+    <div class="container flex-wrap">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>
+        <p>5</p>
+        <p>6</p>
+        <p>7</p>
+        <p>8</p>
+    </div>
+    <hr>
+    <br>
+    <h1>flex-wrap-reverse</h1>
+    <div class="container flex-wrap-rev">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>
+        <p>5</p>
+        <p>6</p>
+        <p>7</p>
+        <p>8</p>
+    </div>
+    <hr>
+    <br>
+    <h1>flex = no-wrap</h1>
+    <div class="container flex-no-wrap">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>
+        <p>5</p>
+        <p>6</p>
+        <p>7</p>
+        <p>8</p>
+    </div>
+    <hr>
+    <br>
+    <h1>Flex-Flow = row</h1>
+     <div class="container flex-flow">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>
+        <p>5</p>
+        <p>6</p>
+        <p>7</p>
+        <p>8</p>
+    </div>
+    <hr>
+    <br>
+<h1>Justify-content = start</h1>
+    <div class="container flex-start">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>
+        <p>5</p>
+        <p>6</p>
+    
+    </div>
+    <hr>
+    <br>
+    <h1>Justify-content = end</h1>
+    <div class="container flex-end">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>
+        <p>5</p>
+    </div>
+    <hr>
+    <br>
+ <h1>Justify-content = center</h1>
+    <div class="container flex-center">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>
+        <p>5</p>
+        <p>6</p>
+    </div>
+    <hr>
+    <br>
+    <h1>Justify-content = space-between</h1>
+    <div class="container space-between">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>
+        <p>5</p>
+        <p>6</p>
+    </div>
+    <hr>
+    <br>
+    <h1>Justify-content = space-around</h1>
+    <div class="container space-around">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>
+        <p>5</p>
+        <p>6</p>
+    </div>
+    <hr>
+    <br>
+    <h1>Justify-content = space-evenly</h1>
+    <div class="container space-evenly">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>
+        <p>5</p>
+        <p>6</p>
+    </div>
+    <hr>
+    <br>
+    
 </body>
 </html>
