align and justify added

--- a/Website/flex/index.html
+++ b/Website/flex/index.html
@@ -171,6 +171,151 @@
     </div>
     <hr>
     <br>
+    <h1>align-items = start</h1>
+    <div class="container start">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+    </div>
+    <hr>
+    <br>
+    <h1>align-items = end</h1>
+    <div class="container end">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>
+        <p>5</p>         
+    </div>
+    <hr>
+    <br>
+    <h1>align-items = center</h1>
+    <div class="container center">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>       
+    </div>
+    <hr>
+    <br>
+    <h1>align-items = stretch</h1>
+    <div class="container stretch">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p> 
+        <p>4</p>
+        <p>5</p>
+        <p>6</p>              
+    </div>
+    <hr>
+    <br>
+    <h1>align-items = baseline</h1>
+    <div class="container baseline">
+        <p>hello</p>
+        <p id="base">world!</p>
+        <p>3</p>       
+    </div>
+    <hr>
+    <br>
+    <h1>align-content = start</h1>
+    <div class="container astart">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>     
+    </div>
+    <hr>
+    <br> 
+<h1>align-content = end</h1>
+    <div class="container aend">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>       
+    </div>
+    <hr>
+    <br>
+    <h1>align-content = center</h1>
+    <div class="container acenter">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p> 
+        <p>4</p> 
+        <p>5</p>     
+    </div>
+    <hr>
+    <br>
+    <h1>align-content = stretch</h1>
+    <div class="container astretch">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p> 
+        <p>4</p> 
+        <p>5</p> 
+        <p>6</p>
+    </div>
+    <hr>
+    <br>
+    <h1>align-content = space-between</h1>
+    <div class="container aspace-between">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p> 
+        <p>4</p> 
+        <p>5</p> 
+        <p>6</p>
+        <p>7</p>
+    </div>
+    <hr>
+    <br>
+    <h1>Gap row and column</h1> 
+    <div class="gap">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p> 
+        <p>4</p>
+        <p>5</p>
+        <p>6</p>
+        <p>7</p>
+        <p>8</p>
+        <p>9</p>
+        <p>10</p>
+    </div>
+    <hr>
+    <br>
+    <h1>Order</h1> 
+    <div class="container">
+        <p class="ord1">1</p>
+        <p class="ord2">2</p>
+        <p class="ord3">3</p> 
+        <p class="ord4">4</p>
+        <p class="ord5">5</p>
+    </div>
+    <hr>
+    <br>
+    <h1>grow</h1> 
+    <div class="container">
+        <p class="grow1">1</p>
+        <p class="grow2">2</p>
+        <p class="grow3">3</p> 
+        <p class="grow4">4</p>
+        <p class="grow5">5</p>
+    </div>
+    <hr>
+    <br>
+    <br>
+    <h1>shrink</h1> 
+    <div class="container">
+        <p class="shrink1">1</p>
+        <p class="shrink2">2</p>
+        <p class="shrink3">3</p> 
+        <p class="shrink4">4</p>
+        <p class="shrink5">5</p>
+    </div>
+    <hr>
+    <br>
+    
+
+
+
     
 </body>
 </html>
