--- a/Website/portflio/index.html
+++ b/Website/portflio/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portflio</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <header class="header">
@@ -17,16 +18,23 @@
             <a href="#">Contact</a>
         </nav>
     </header>
-    <section class="homw">
+    <section class="home">
         <div class="home-content">
             <h3>Hello its me</h3>
             <h1>Muthu </h1>
-            <h3>And I'm a</h3>
+            <h3>And I'm a<span class="text"></span></h3>
             <p>I am a software engineer.<br>
             I am a fresher in the field.
             </p>
-            <div class="home-content"></div>
+            <div class="home-sci">
+                <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="#"><i class='bx bxl-twitter' ></i></a>
+                <a href="#"><i class='bx bxl-github' ></i></a>
+               <div>
+                <a href="#" class="btn-box">More about Me</a>
         </div>
     </section>
+    <script src="main.js"> </script>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 </body>
 </html>
