user flow journey

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet " href="style.css">
 </head>
 <body>
-    <h1><center>calculator</center></h1>
-    <center><div class="square">
-        <center><div class="square1"></div></center>
-    </div></center>
- 
-    <!-- <link rel="javascript" href="cal.js"> -->
-</body>
+<div id="org">
+    <div class="square"><div id="we"></div>
+</div>
+    
+</div>   
+ </body>
 </html>
