--- a/calculator/index.html
+++ b/calculator/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 <div id="org">
-    <div class="square"><div id="we"></div>
+    <div class="square"><div id="we">
+        <div class="inside"></div>
+    </div>
 </div>
     
 </div>   
