one model complete in Team Site

--- a/Teamsite/index.html
+++ b/Teamsite/index.html
@@ -12,7 +12,7 @@
         <div class="container left-container ">
             <img src="amazon.png">
             <div class="text-box">
-                <h2>Alphabet Inc .</h2>
+                <h2>amazon Inc .</h2>
                 <small>2018-2019</small>
                 <p>SQL is a standard language for storing, manipulating and retrieving data in databases</p>
                 <span class="left-container-arrow"></span>
@@ -30,9 +30,28 @@
         </div>
 
         <div class="container left-container">
+            <img src="google.png">
+            <div class="text-box">
+                <h2>google Inc .</h2>
+                <small>2018-2019</small>
+                <p>SQL is a standard language for storing, manipulating and retrieving data in databases</p>
+                <span class="left-container-arrow"></span>
+            </div>
+        </div>
+        <div class="container right-container">
             <img src="Tesla.png">
             <div class="text-box">
-                <h2>Amazon Inc .</h2>
+                <h2>tesla.</h2>
+                <small>2018-2019</small>
+                <p>SQL is a standard language for storing, manipulating and retrieving data in databases</p>
+                <span class="right-container-arrow"></span>
+            </div>
+        </div>
+
+        <div class="container left-container">
+            <img src="toyota.jpg">
+            <div class="text-box">
+                <h2>toyota.</h2>
                 <small>2018-2019</small>
                 <p>SQL is a standard language for storing, manipulating and retrieving data in databases</p>
                 <span class="left-container-arrow"></span>
@@ -41,12 +60,14 @@
         <div class="container right-container">
             <img src="YouTube.png">
             <div class="text-box">
-                <h2>toyato Inc .</h2>
+                <h2>YouTube</h2>
                 <small>2018-2019</small>
                 <p>SQL is a standard language for storing, manipulating and retrieving data in databases</p>
                 <span class="right-container-arrow"></span>
             </div>
         </div>
+
+        
 
     </div>
 </body>
