--- a/Website/portfolio/index.html
+++ b/Website/portfolio/index.html
@@ -3,38 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portflio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">Portflio</a>
+        <a href="#" class="logo">Portfolio</a>
         <nav class="navbar">
             <a href="#">Home</a>
             <a href="#">About</a>
-            <a href="#">Skill</a>
-            <a href="#">Portflio</a>
+            <a href="#">Skils</a>
+            <a href="#">Portfolio</a>
             <a href="#">Contact</a>
         </nav>
     </header>
     <section class="home">
         <div class="home-content">
-            <h3>Hello its me</h3>
-            <h1>Muthu </h1>
-            <h3>And I'm a<span class="text"></span></h3>
-            <p>I am a software engineer.<br>
-            I am a fresher in the field.
-            </p>
+            <h3>Hello,Its Me</h3>
+            <h1>MUTHUVEL</h1>
+            <h3>And </h3>
+            <p>I'm a Web Designer</p>
             <div class="home-sci">
-                <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-                <a href="#"><i class='bx bxl-twitter' ></i></a>
-                <a href="#"><i class='bx bxl-github' ></i></a>
-               <div>
-                <a href="#" class="btn-box">More about Me</a>
+                <a href="#"><i class='bx bxl-whatsapp-square bx-tada bx-flip-horizontal' style='color:#08fde0' ></i></a>
+                <a href="#"><i class='bx bxl-linkedin-square' style='color:#fd082a'  ></i></a>
+                <a href="#"><i class='bx bxl-facebook-circle' style='color:#e61313'  ></i></a>
+            </div>
+            <a href="#" class="btn-box">More About Me</a>
         </div>
-    </section>
-    <script src="main.js"> </script>
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+        <div class="home-img-box">
+            <img src="/profile.jpeg" width="300px" alt="">
+        </div>
+        </section>
+ 
 </body>
 </html>
