--- a/Website/portfolio/index.html
+++ b/Website/portfolio/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 </head>
 <body>
     <header class="header">
@@ -22,7 +23,7 @@
         <div class="home-content">
             <h3>Hello,Its Me</h3>
             <h1>MUTHUVEL</h1>
-            <h3>And </h3>
+            <h3>And I'm <span class="text"></span></h3>
             <p>I'm a Web Designer</p>
             <div class="home-sci">
                 <a href="#"><i class='bx bxl-whatsapp-square bx-tada bx-flip-horizontal' style='color:#08fde0' ></i></a>
@@ -35,6 +36,7 @@
             <img src="/profile.jpeg" width="300px" alt="">
         </div>
         </section>
+        <script src="main.js"></script>
  
 </body>
 </html>
