--- a/Website/portfolio/index.html
+++ b/Website/portfolio/index.html
@@ -12,11 +12,11 @@
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
         <nav class="navbar">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Skils</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Contact</a>
+            <a href="#" style="--i:1" class="active">Home</a>
+            <a href="#" style="--i:2">About</a>
+            <a href="#" style="--i:3">Skils</a>
+            <a href="#" style="--i:4">Portfolio</a>
+            <a href="#" style="--i:5">Contact</a>
         </nav>
     </header>
     <section class="home">
@@ -26,17 +26,43 @@
             <h3>And I'm <span class="text"></span></h3>
             <p>I'm a Web Designer</p>
             <div class="home-sci">
-                <a href="#"><i class='bx bxl-whatsapp-square bx-tada bx-flip-horizontal' style='color:#08fde0' ></i></a>
-                <a href="#"><i class='bx bxl-linkedin-square' style='color:#fd082a'  ></i></a>
-                <a href="#"><i class='bx bxl-facebook-circle' style='color:#e61313'  ></i></a>
+                <a href="#" style="--i:7"><i class='bx bxl-whatsapp-square bx-tada bx-flip-horizontal' style='color:#08fde0' ></i></a>
+                <a href="#" style="--i:8"><i class='bx bxl-linkedin-square' style='color:#fd082a'  ></i></a>
+                <a href="#" style="--i:9"><i class='bx bxl-facebook-circle' style='color:#e61313'  ></i></a>
             </div>
             <a href="#" class="btn-box">More About Me</a>
         </div>
         <div class="home-img-box">
             <img src="/profile.jpeg" width="300px" alt="">
         </div>
+        <span class="home-imgHover"></span>
+        </section>
+        <!-- --------------------------------------------------------->
+         <section class="about" id="about">
+            <!-- <div class="home-img-box">
+                <img src="/profile.jpeg" width="300px" alt="">
+            </div> -->
+            <div class="about-img">
+                <img src="/profile.jpeg" width="300px">                    
+             </div>
+             <div class="about-text">
+                <h2>About <span>Me</span></h2>
+                <h4>Full Stack Developer</h4>
+                <p>"As a full-stack developer, I possess a diverse skill set that enables me to tackle every aspect of web and software development. 
+                    I'm well-versed in both front-end and back-end technologies, allowing me to create seamless and interactive user experiences
+                    while also building robust server-side solutions. My proficiency in programming languages like JavaScript, Python, and Java, 
+                    coupled with expertise in frameworks such as React, Node.js, and Django, equips me to design and implement scalable applications.
+                    With a strong grasp of databases, API integration, and cloud computing, I can efficiently manage data and infrastructure. Additionally,
+                    my commitment to staying up-to-date with the latest industry trends and best practices ensures that I deliver high-quality, innovative solutions 
+                    to meet the evolving demands of the digital landscape."</p>
+                    <a href="#" class="btn-box">More About Me  </a>
+             </div>
         </section>
         <script src="main.js"></script>
  
 </body>
-</html>
+</html> 
+
+
+
+<a rel="stylesheet" href="style.css"></a>
