basic css added

--- a/Website/Bootstrap/login.html
+++ b/Website/Bootstrap/login.html
@@ -21,7 +21,7 @@
                             <input type="text" class="form-control" id="username" placeholder="Enter your username">
                         </div>
                         <div class="form-group">
-                            <label for="password">Password</label>
+                            <label form="password">Password</label>
                             <input type="password" class="form-control" id="password" placeholder="Enter your password">
                         </div>
                         <button type="submit" class="btn btn-primary">Login</button>
