--- a/Website/portfolio/new portfolio/index.html
+++ b/Website/portfolio/new portfolio/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-<nav class="nav">
+  
+<!-- <nav class="nav">
     <a href="#"  class="logo">logo</a>
     <ul class="nav-list">
         <li><a href="#Education">Education</a></li>
@@ -21,7 +23,38 @@
 <div class="image-container">
     <img src="background1.jpng" alt="Your Image">
     <div class="image-text">Your Text</div>
-  </div>
+  </div> -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-warning d-flex">
+    <a class="navbar-brand" href="#">
+        <img src="reshot-icon-rainbow-VUCBQSDYFJ.svg"alt="" width="50"height="30">
+    </a>
+    <div class="collapse navbar-collapse" id="navbarNav" >
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Skills</a>
+        </li>        
+        <li class="nav-item">
+            <a class="nav-link" href="#">Certifications</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Career</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Contact Me</a>
+          </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="home-container" id="home">
+  <h1>Hello</h1>
   
+
+
 </body>
 </html>
